# JNIExample

./: README.md  run_cpp  run_java
Cpp/: CMakeLists.txt
Cpp/example/: CMakeLists.txt  main.cc
Cpp/wrapper/: CMakeLists.txt  jni_wrapper.cc
Java/: Program.java  Sieve.java
